# tutorial_g_buffer

./: .gitignore  CMakeLists.txt  README.md  count_src_loc.ps1
config/: config_cxx_lib.h.in  config_cxx_main.h.in  msvc_env.bat
src/cxx_lib/: CMakeLists.txt
src/cxx_lib/resources/: IndexPoolAccessor.cpp  IndexPoolAccessor.h  Interface_ExternalResourcePoolAccessor.h  VertexPoolAccessor.cpp  VertexPoolAccessor.h
src/cxx_lib/scene/: Interface_SceneImporter.h  SceneImporter_Assimp.cpp  SceneImporter_Assimp.h  SceneRenderer_GL.cpp  SceneRenderer_GL.h
src/cxx_lib/scene/data_structures/: Material.h  Mesh.h  Node.h  RenderScene.h  TextureInfo.h  Transform.h  Vertex.h  document.md
src/cxx_lib/se/: CMakeLists.txt  GlobalLogger.cpp  GlobalLogger.h  IdentificationGenerator.cpp  IdentificationGenerator.h  Interface_Identification.h  Singleton.h
src/cxx_main/: CMakeLists.txt  forward_rendering.cpp  g_buffer_rendering.cpp
src/cxx_main/common/camera/: Camera.cpp  Camera.h
src/cxx_main/common/light/: Light.cpp  Light.h  LightManager.cpp  LightManager.h
src/cxx_main/common/program/: Program.cpp  Program.h
src/cxx_main/common/shader/: FragmentShader.cpp  FragmentShader.h  Shader.h  VertexShader.cpp  VertexShader.h
src/cxx_main/common/util/: CLI_Color.h  Utilities.cpp  Utilities.h
src/cxx_main/glsl/: deferred_lighting.frag  deferred_lighting.vert  fwd.frag  fwd.vert  g_buffer_geom.frag  g_buffer_geom.vert
